gitops/production/longhorn-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  parentRefs:
    - name: contour
      namespace: contour
  hostnames:
    - "storage-production.amedsaude.com.br"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: longhorn-auth
          port: 80
